update the date of baseof.html