@@ -1,1560 +1,363 @@
 ---
-title: 详解JDK8新特性
+title: OpenLooKeng介绍
 tags:
-  - Java8
-  - JDK8
-  - 新特性
+  - Openlookeng
 categories:
-  - Java基础
-  - 新特性
-keywords: Java8，新特性，JDK8
-description: 详解JDK8出现的新特性。
-cover: 'https://npm.elemecdn.com/lql_static@latest/logo/java.png'
+  - OpenLooKeng
+keywords: OpenLooKeng介绍
+description: OpenLooKeng介绍。
 abbrlink: de3879ae
 date: 2020-10-19 22:15:58
 ---
 
 
 
-# Java8新特性纵览
+<a name="Nfhqw"></a>
+## 一、说明
+<a name="zuQta"></a>
+### 1.1 OpenLooKeng介绍
+openLooKeng的LooKeng取自中国著名数据家华罗庚先生的英文名Loo-keng Hua。同时LooKeng的发音也与Looking相近，寓意查询分析各种数据，让大数据更简单。<br />openLooKeng是一种"开箱即用"的引擎，支持在任何地点（包括地理上的远程数据源）对任何数据进行原位分析。它通过SQL 2003接口提供了所有数据的全局视图。openLooKeng具有高可用性、自动伸缩、内置缓存和索引支持，为企业工作负载提供了所需的可靠性。<br />openLooKeng用于支持数据探索、即席查询和批处理，具有100+毫秒至分钟级的近实时时延，而无需移动数据。openLooKeng还支持层次化部署，使地理上远程的openLooKeng集群能够参与相同的查询。利用其跨区域查询计划优化能力，涉及远程数据的查询可以达到接近“本地”的性能<br />**openLooKeng HA解决协调节点单点故障问题。用户可以在任何协调节点上提交查询，以平衡工作负载。**
+<a name="P7JCf"></a>
+### 1.2 安装说明
+安装OpenLooKeng之前，⾸先必须对整个OpenLooKeng进⾏规划，规划包括主机节点、⽹络、软件模块分布等部分。运维⼈员必须保证⽤于安装的服务器满⾜OpenLooKeng的基本要求。这些要求包括硬件要求、软件要求、内存要求、⽹络要求等，本⽂将对这些要求进⾏详细介绍。OpenLooKeng安装包括以下步骤：
 
-> 本篇文章只讲解比较重要的
+1. 在所有的节点上安装所需要的操作系统，配置安装环境；
+1. 根据规划安装OpenLooKeng；
+1. 配置OpenLooKeng高可用。
+   <a name="tBtuy"></a>
+### 1.3 适宜范围
+本手册适宜阅读人员：系统维护人员，系统管理人员，开发人员。
+<a name="UZRT7"></a>
+## 二、安装准备
+<a name="m8k4R"></a>
+### 2.1 JDK版本
+| Name | Version |
+| --- | --- |
+| OracleJDK | JDK1.8_244以上 |
 
-<img src="https://npm.elemecdn.com/youthlql@1.0.8/Java_Basis/Java8_New_Features/0001.png">
+<a name="XGvWl"></a>
+### 2.2 服务器规划
+安装具有HA的openLooKeng要求集群中至少有2个协调节点。请确保协调节点上的时间一致性。
 
+| 主机 | 操作系统 | CPU | 内存 | 磁盘 | 备注 |
+| --- | --- | --- | --- | --- | --- |
+| 192.168.1.1 | Centos 7 | 8核 | 16GB | 500GB | coordinator、worker |
+| 192.168.1.2 | Centos 7 | 8核 | 16GB | 500GB | coordinator、worker |
+| 192.168.1.3 | Centos 7 | 8核 | 16GB | 500GB | nginx |
 
+<a name="Ei6W0"></a>
+## 三、开始安装
+<a name="ih9Vm"></a>
+### 3.1 配置高可用
+<a name="RK3yi"></a>
+#### 3.1.1 安全环境（HDFS）
+```properties
+# 安装192.168.1.1的coordinator和worker
+cd /opt/third
+wget https://download.openlookeng.io/1.5.0/hetu-server-1.5.0.tar.gz
+tar -xvzf hetu-server-1.5.0.tar.gz
+ln -s hetu-server-1.5.0 hetu-server
 
-# Lambda表达式
+$ cd hetu-server
 
-## 为什么使用Lambda表达式？
+# 分别创建data、etc、logs目录
+mkdir data
+mkdir etc  
+mkdir logs
 
-- Lambda 是一个**匿名函数**，我们可以把 Lambda 表达式理解为是**一段可以传递的代码**（将代码像数据一样进行传递）。使用它可以写出更简洁、更灵活的代码。作为一种更紧凑的代码风格，使Java的语言表达能力得到了提升。
-- 在Java8之后的很多源码里用到了Lambda表达式，不学的话可能看不懂源码。
+vi etc/node.properties
+# 输入内容:
+node.environment=openlookeng
+node.launcher-log-file=/opt/third/hetu-server/logs/launch.log
+node.server-log-file=/opt/third/hetu-server/logs/server.log
+node.data-dir=/opt/third/hetu-server/data
+plugin.dir=/opt/third/hetu-server/plugin
+# 动态catalog配置
+catalog.config-dir=/opt/openlookeng/catalog
+catalog.share.config-dir=/opt/openlookeng/catalog/share
 
+vi etc/jvm.config
+# 输入内容:
+-server
+-Xmx16G
+-XX:-UseBiasedLocking
+-XX:+UseG1GC
+-XX:G1HeapRegionSize=32M
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+ExitOnOutOfMemoryError
+-XX:+UseGCOverheadLimit
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+ExitOnOutOfMemoryError
 
+vi etc/config.properties
+# 输入内容:
+coordinator=true
+node-scheduler.include-coordinator=true
+http-server.http.port=8123
+query.max-memory=50GB
+query.max-total-memory=50GB
+query.max-memory-per-node=10GB
+query.max-total-memory-per-node=10GB
+discovery-server.enabled=true
+discovery.uri=http://192.168.1.1:8123
+hetu.queryeditor-ui.allow-insecure-over-http=true
+# 开启动态catalog
+catalog.dynamic-enabled=true
+# 高可用配置项
+hetu.multiple-coordinator.enabled=true
+hetu.embedded-state-store.enabled=true
 
-## 简单使用
+vi etc/log.properties
+# 输入内容:
+io.prestosql=INFO
 
-```java
- @Test
-    public void test1(){
-        //原始写法
-        Runnable r1 = new Runnable() {
-            @Override
-            public void run() {
-                System.out.println("我爱北京天安门");
-            }
-        };
+# 动态配置会检查hdfs.config.resources的目录，所以拷贝到/opt/openlookeng/config目录下
+mkdir -p /opt/openlookeng/config
+cp {hdfs}/core-site.xml /opt/openlookeng/config
+cp {hdfs}/hdfs-site.xml /opt/openlookeng/config
 
-        r1.run();
+mkdir etc/filesystem/
+vi etc/filesystem/hdfs-config-default.properties
+# 输入内容:
+fs.client.type=hdfs
+hdfs.config.resources=/opt/openlookeng/config/core-site.xml, /opt/openlookeng/config/hdfs-site.xml
+hdfs.authentication.type=KERBEROS
+fs.hdfs.impl.disable.cache=true
+# 以下为安全环境kerberos认证所需配置
+hdfs.krb5.conf.path=/opt/openlookeng/config/krb5.conf
+hdfs.krb5.keytab.path=/opt/openlookeng/config/hdfs.headless.keytab
+hdfs.krb5.principal=hdfs-emr1@HADOOP.COM
 
-        System.out.println("***********************");
+vi etc/state-store.properties
+# 输入内容：
+state-store.type=hazelcast
+state-store.name=query
+state-store.cluster=cluster1
+hazelcast.discovery.mode=tcp-ip   
+hazelcast.discovery.port=5701       
+#在hazelcast.discovery.tcp-ip.seeds或者hazelcast.discovery.tcp-ip.profile配置任选其一
+hazelcast.discovery.tcp-ip.seeds=192.168.1.1:5701,192.168.1.2:5701
+hazelcast.discovery.tcp-ip.profile=hdfs-config-default
 
-        //lambda表达式，可以表达一样的意思
-        Runnable r2 = () -> System.out.println("我爱北京故宫");
+# HDFS上新建目录：
+# 安全环境需要先进行认证：kinit -kt hdfs.keytab hdfs@HADOOP.COM
+# 非安全环境直接执行创建语句
+hadoop fs -mkdir -p /opt/openlookeng/catalog/share
 
-        r2.run();
-    }
+# 本地
+mkdir -p /opt/openlookeng/catalog
 
-
-    @Test
-    public void test2(){
-
-        Comparator<Integer> com1 = new Comparator<Integer>() {
-            @Override
-            public int compare(Integer o1, Integer o2) {
-                return Integer.compare(o1,o2);
-            }
-        };
-
-        int compare1 = com1.compare(12,21);
-        System.out.println(compare1);
-
-        System.out.println("***********************");
-        
-        //Lambda表达式的写法
-        Comparator<Integer> com2 = (o1,o2) -> Integer.compare(o1,o2);
-
-        int compare2 = com2.compare(32,21);
-        System.out.println(compare2);
-
-
-        System.out.println("***********************");
-        //方法引用
-        Comparator<Integer> com3 = Integer :: compare;
-
-        int compare3 = com3.compare(32,21);
-        System.out.println(compare3);
-    }
+# 同样的方式安装配置192.168.1.2即可
 ```
-
-
-
-## Lambda语法规则
-
-```Java
-import org.junit.Test;
-
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.function.Consumer;
-
-/**
- * Lambda表达式的使用
- * <p>
- * 1.举例： (o1,o2) -> Integer.compare(o1,o2);
- * 2.格式：
- * -> :lambda操作符 或 箭头操作符
- * ->左边：lambda形参列表 （其实就是接口中的抽象方法的形参列表）
- * ->右边：lambda体 （其实就是重写的抽象方法的方法体）
- * <p>
- * 3. Lambda表达式的使用：（分为6种情况介绍）
- * <p>
- * 总结：
- * ->左边：lambda形参列表的参数类型可以省略(类型推断)；如果lambda形参列表只有一个参数，其一对()也
- * 可以省略
- * ->右边：lambda体应该使用一对{}包裹；如果lambda体只有一条执行语句（可能是return语句），省略这一
- 对{}和return关键字
- * <p>
- * 4.Lambda表达式的本质：作为函数式接口的实例
- * <p>
- * 5. 如果一个接口中，只声明了一个抽象方法，则此接口就称为函数式接口。我们可以在一个接口上
- 使用 @FunctionalInterface 注解，
- * 这样做可以检查它是否是一个函数式接口。
- * <p>
- * 6. 所以以前用匿名实现类表示的现在都可以用Lambda表达式来写。
- */
-public class LambdaTest1 {
-    //语法格式一：无参，无返回值
-    @Test
-    public void test1() {
-        Runnable r1 = new Runnable() {
-            @Override
-            public void run() {
-                System.out.println("我爱北京天安门");
-            }
-        };
-
-        r1.run();
-
-        System.out.println("***********************");
-
-        Runnable r2 = () -> {
-            System.out.println("我爱北京故宫");
-        };
-
-        r2.run();
-    }
-
-    //语法格式二：Lambda 需要一个参数，但是没有返回值。
-    @Test
-    public void test2() {
-
-        Consumer<String> con = new Consumer<String>() {
-            @Override
-            public void accept(String s) {
-                System.out.println(s);
-            }
-        };
-        con.accept("谎言和誓言的区别是什么？");
-
-        System.out.println("*******************");
-
-        Consumer<String> con1 = (String s) -> {
-            System.out.println(s);
-        };
-        con1.accept("一个是听得人当真了，一个是说的人当真了");
-
-    }
-
-    //语法格式三：数据类型可以省略，因为可由编译器推断得出，称为“类型推断”
-    @Test
-    public void test3() {
-
-        Consumer<String> con1 = (String s) -> {
-            System.out.println(s);
-        };
-        con1.accept("一个是听得人当真了，一个是说的人当真了");
-
-        System.out.println("*******************");
-
-        Consumer<String> con2 = (s) -> {
-            System.out.println(s);
-        };
-        con2.accept("一个是听得人当真了，一个是说的人当真了");
-
-    }
-
-    @Test
-    public void test4() {
-
-        ArrayList<String> list = new ArrayList<>();//类型推断
-
-        int[] arr = {1, 2, 3};//类型推断
-
-    }
-
-    //语法格式四：Lambda 若只需要一个参数时，参数的小括号可以省略
-    @Test
-    public void test5() {
-        Consumer<String> con1 = (s) -> {
-            System.out.println(s);
-        };
-        con1.accept("一个是听得人当真了，一个是说的人当真了");
-
-        System.out.println("*******************");
-
-        Consumer<String> con2 = s -> {
-            System.out.println(s);
-        };
-        con2.accept("一个是听得人当真了，一个是说的人当真了");
-
-
-    }
-
-    //语法格式五：Lambda 需要两个或以上的参数，多条执行语句，并且可以有返回值
-    @Test
-    public void test6() {
-
-        Comparator<Integer> com1 = new Comparator<Integer>() {
-            @Override
-            public int compare(Integer o1, Integer o2) {
-                System.out.println(o1);
-                System.out.println(o2);
-                return o1.compareTo(o2);
-            }
-        };
-
-        System.out.println(com1.compare(12, 21));
-
-        System.out.println("*****************************");
-        Comparator<Integer> com2 = (o1, o2) -> {
-            System.out.println(o1);
-            System.out.println(o2);
-            return o1.compareTo(o2);
-        };
-
-        System.out.println(com2.compare(12, 6));
-
-
-    }
-
-    //语法格式六：当 Lambda 体只有一条语句时，return 与大括号若有，都可以省略
-    @Test
-    public void test7() {
-
-        Comparator<Integer> com1 = (o1, o2) -> {
-            return o1.compareTo(o2);
-        };
-
-        System.out.println(com1.compare(12, 6));
-
-        System.out.println("*****************************");
-
-        Comparator<Integer> com2 = (o1, o2) -> o1.compareTo(o2);
-
-        System.out.println(com2.compare(12, 21));
-
-    }
-
-    @Test
-    public void test8() {
-        Consumer<String> con1 = s -> {
-            System.out.println(s);
-        };
-        con1.accept("一个是听得人当真了，一个是说的人当真了");
-
-        System.out.println("*****************************");
-
-        Consumer<String> con2 = s -> System.out.println(s);
-
-        con2.accept("一个是听得人当真了，一个是说的人当真了");
-
-    }
-
-}
+<a name="N9tNa"></a>
+#### 3.1.2 非安全环境
+将hdfs-config-default.properties文件按照以下方式修改配置项即可，其他配置同安全环境保持一致
+```properties
+vi {hetu-server}/etc/filesystem/hdfs-config-default.properties
+# 输入内容:
+fs.client.type=hdfs
+hdfs.config.resources=/opt/openlookeng/config/core-site.xml, /opt/openlookeng/config/hdfs-site.xml
+hdfs.authentication.type=NONE
+fs.hdfs.impl.disable.cache=true
 ```
+<a name="RdJ0L"></a>
+### 3.2 启动
+```shell
+./bin/launcher start
+```
+<a name="vFa4Q"></a>
+### 3.3 查看Web页面
+浏览器输入：[http://192.168.1.1:8123/ui/](http://192.168.1.150:8123/ui/)或[http://192.168.1.2:8123/ui/](http://192.168.1.1:8123/ui/)
+> 注：登陆账号输入admin即可，登陆后点击Run运行默认语句进行验证如下：
 
+![](../../../images/img.png)
+<a name="Q82f3"></a>
+## 四、动态Catalog功能验证
+<a name="YhQFY"></a>
+### 4.1 新增Mysql Catalog
+```shell
+# 方式一：http请求添加
+curl --location --request POST 'http://192.168.1.1:8123/v1/catalog' \
+--header 'X-Presto-User: admin' \
+--form 'catalogInformation="{
+        \"catalogName\" : \"mysql\",
+        \"connectorName\" : \"mysql\",
+        \"properties\" : {
+              \"connection-url\" : \"jdbc:mysql://localhost:3306\",
+              \"connection-user\" : \"root\",
+              \"connection-password\" : \"root@123456\"
+              }
+          }
+"' 
+# 方式二：界面点击添加（操作较简单，本文不演示）
+```
+<a name="wRw66"></a>
+#### 4.1.1 查看UI界面
+![img_1.png](../../../images/img_1.png)
+<a name="e7bVW"></a>
+#### 4.1.2 查看HDFS目录
+```shell
+hadoop fs -mkdir -p /opt/openlookeng/catalog/share/catalog
+```
+![img_2.png](../../../images/img_2.png)
+<a name="GIt5e"></a>
+#### 4.1.3 删除Mysql Catalog
+```shell
+curl --location --request DELETE 'http://192.168.1.1:8123/v1/catalog/mysql' --header 'X-Presto-User: admin'
+```
+<a name="EQEz9"></a>
+### 4.2 新增Hive Catalog
+> 这里直接使用postman请求，参数封装方便一些。
 
+<a name="bez9C"></a>
+#### 4.2.1 配置
 
-# 函数式接口
+- 导入示例请求到postman[新增Hive Catalog.postman_collection.json](https://dtwave.yuque.com/attachments/yuque/0/2022/json/2707056/1651453392506-ac3bd967-0648-4506-a929-4b6b1a4d6af6.json?_lake_card=%7B%22src%22%3A%22https%3A%2F%2Fdtwave.yuque.com%2Fattachments%2Fyuque%2F0%2F2022%2Fjson%2F2707056%2F1651453392506-ac3bd967-0648-4506-a929-4b6b1a4d6af6.json%22%2C%22name%22%3A%22%E6%96%B0%E5%A2%9EHive+Catalog.postman_collection.json%22%2C%22size%22%3A3142%2C%22type%22%3A%22application%2Fjson%22%2C%22ext%22%3A%22json%22%2C%22status%22%3A%22done%22%2C%22taskId%22%3A%22u723f3550-09a1-465d-86c4-88845c6f6c0%22%2C%22taskType%22%3A%22upload%22%2C%22id%22%3A%22u3d18d44f%22%2C%22card%22%3A%22file%22%7D)
 
+导入后可以看到两个请求示例，分别是安全环境和非安全环境下新增Hive Catalog的配置示例。<br />![img_3.png](../../../images/img_3.png)
 
+- 修改配置项并发送请求。
+  <a name="ew5S2"></a>
+#### 4.2.2 查看UI界面
+![img_4.png](../../../images/img_4.png)
+<a name="gk6HF"></a>
+#### 4.2.3 查看HDFS目录
+![img_5.png](../../../images/img_5.png)
+<a name="ToRKr"></a>
+#### 4.2.4 删除Hive Catalog
+```shell
+curl --location --request DELETE 'http://192.168.1.1:8123/v1/catalog/hive' --header 'X-Presto-User: admin'
+```
+<a name="MU0nS"></a>
+## 五、配置HA及反向代理
+<a name="IK2W4"></a>
+### 5.1 安装Nginx
+```shell
+$ cd /opt/third
+# 下载nginx-1.20.2.tar.gz
+# 解压
+$ tar -zxvf nginx-1.20.2.tar.gz
+$ ln -s nginx-1.20.2 nginx
+$ cd nginx
+$ ./configure --prefix=/opt/third/nginx --with-stream
+$ make && make install
 
-## 什么是函数式(Functional)接口
+# 创建日志目录及文件
+$ mkdir logs
+$ touch logs/access.log
+$ touch logs/error.log
 
-- 只包含一个抽象方法的接口，称为**函数式接口**。 
+# 启动验证nginx安装是否成功
+$ ./sbin/nginx
+```
+<a name="drO0I"></a>
+### 5.2 配置Nginx反向代理
+```bash
+# 修改Nginx配置文件
+$ vi conf/nginx.conf
+# 在http同级添加以下配置即可
 
-- 你可以通过 Lambda 表达式来创建该接口的对象。（若 Lambda 表达式抛出一个受检异常(即：非运行时异常)，那么该异常需要在目标接口的抽象方法上进行声明）。
+stream {
 
-- 我们可以在一个接口上使用 **@FunctionalInterface** 注解，这样做可以检查它是否是一个函数式接口。同时 javadoc 也会包含一条声明，说明这个接口是一个函数式接口。
-
-- 在java.util.function包下定义了Java 8 的丰富的函数式接口
-
-
-
-## 如何理解函数式接口
-
-- Java从诞生日起就是一直倡导“一切皆对象”，在Java里面面向对象(OOP)编程是一切。但是随着python、scala等语言的兴起和新技术的挑战，Java不得不做出调整以便支持更加广泛的技术要求，也即java不但可以支持OOP还可以支持OOF（面向函数编程） 
-- 在函数式编程语言当中，函数被当做一等公民对待。在将函数作为一等公民的编程语言中，Lambda表达式的类型是函数。但是在Java8中，有所不同。在Java8中，Lambda表达式是对象，而不是函数，它们必须依附于一类特别的对象类型——函数式接口。 
-- 简单的说，在Java8中，Lambda表达式就是一个函数式接口的实例。这就是Lambda表达式和函数式接口的关系。也就是说，只要一个对象是函数式接口的实例，那么该对象就可以用Lambda表达式来表示。
-- 所以以前用匿名实现类表示的现在都可以用Lambda表达式来写。
-
-
-
-## Java内置函数式接口
-
-
-
-**核心函数式接口**
-
-<img src="https://npm.elemecdn.com/youthlql@1.0.8/Java_Basis/Java8_New_Features/0002.png">
-
-
-
-**其它函数式接口**
-
-<img src="https://npm.elemecdn.com/youthlql@1.0.8/Java_Basis/Java8_New_Features/0003.png">
-
-
-
-
-
-**Consumer**
-
-```java
- @Test
-    public void test1(){
-
-        happyTime(500, new Consumer<Double>() {
-            @Override
-            public void accept(Double aDouble) {
-                System.out.println("学习太累了，去天上人间买了瓶矿泉水，价格为：" + aDouble);
-            }
-        });
-
-        System.out.println("********************");
-
-        happyTime(400,money -> System.out.println("学习太累了，去天上人间喝了口水，价格为：" + money));
+    upstream olks{
+        server 192.168.1.1:8123;
+        server 192.168.1.2:8123;
     }
 
-    public void happyTime(double money, Consumer<Double> con){
-        con.accept(money);
-    }
-```
-
-
-
-**结果：**
-
-```Java
-学习太累了，去天上人间买了瓶矿泉水，价格为：500.0
-********************
-学习太累了，去天上人间喝了口水，价格为：400.0
-
-Process finished with exit code 0
-```
-
-
-
-**Predicate**
-
-```java
-@Test
-    public void test2(){
-        List<String> list = Arrays.asList("北京","南京","天津","东京","西京","普京");
-
-        List<String> filterStrs = filterString(list, new Predicate<String>() {
-            @Override
-            public boolean test(String s) {//这里是定义一个校验规则
-                return s.contains("京");
-            }
-        });
-
-        System.out.println(filterStrs);
-
-        //用lambda表达式会很简单
-        List<String> filterStrs1 = filterString(list,s -> s.contains("京"));
-        System.out.println(filterStrs1);
-    }
-
-    //根据给定的规则，过滤集合中的字符串。此规则由Predicate的方法决定
-    public List<String> filterString(List<String> list, Predicate<String> pre){
-
-        ArrayList<String> filterList = new ArrayList<>();
-
-        for(String s : list){
-            if(pre.test(s)){
-                filterList.add(s);
-            }
-        }
-
-        return filterList;
-
-    }
-
-```
-
-
-
-**结果：**
-
-```
-[北京, 南京, 东京, 西京, 普京]
-[北京, 南京, 东京, 西京, 普京]
-
-Process finished with exit code 0
-```
-
-
-
-## 自定义函数式接口
-
-```java
-/**
- * 自定义函数式接口
- * 只是说加上@FunctionalInterface之后可以校验
- */
-@FunctionalInterface
-public interface MyFunInterface<T> {
-
-    public T getValue(T t);
-
-}
-```
-
-
-
-```java
-public class Test {
-
-    public static void main(String[] args) {
-        //这个方法的第一个参数是lambda表达式，相当于是实例化了那个函数式接口
-        String s = toUpperString(str -> str.toUpperCase(), "abcd");
-        System.out.println(s);
-    }
-
-    public static String toUpperString(MyFunInterface<String> mf,String str){
-        return mf.getValue(str);
+    server {
+        listen 8123;
+        proxy_timeout 600s;
+        proxy_connect_timeout 20s;
+        proxy_pass olks;
     }
 }
 ```
+如图：<br />![img_6.png](../../../images/img_6.png)
 
-
-
-# 方法引用
-
-- 当要传递给Lambda体的操作，已经有实现的方法了，可以使用方法引用！
-
-- 方法引用可以看做是Lambda表达式深层次的表达。换句话说，方法引用就是Lambda表达式，也就是函数式接口的一个实例，通过方法的名字来指向一个方法，可以认为是Lambda表达式的一个语法糖。
-
-- 要求：实现接口的抽象方法的参数列表和返回值类型，必须与方法引用的方法的参数列表和返回值类型保持一致！
-
-- 格式：使用操作符 “::” 将类(或对象) 与 方法名分隔开来。
-
-- 如下三种主要使用情况： 
-
-  - 对象 :: 实例方法名
-
-  - 类 :: 静态方法名
-
-  - 类 :: 实例方法名
-
-
-
-我们直接拿例子来说明情况，先提前准备两个类：
-
-```Java
-
-public class Employee {
-
-	private int id;
-	private String name;
-	private int age;
-	private double salary;
-
-	public int getId() {
-		return id;
-	}
-
-	public void setId(int id) {
-		this.id = id;
-	}
-
-	public String getName() {
-		return name;
-	}
-
-	public void setName(String name) {
-		this.name = name;
-	}
-
-	public int getAge() {
-		return age;
-	}
-
-	public void setAge(int age) {
-		this.age = age;
-	}
-
-	public double getSalary() {
-		return salary;
-	}
-
-	public void setSalary(double salary) {
-		this.salary = salary;
-	}
-
-	public Employee() {
-		System.out.println("Employee().....");
-	}
-
-	public Employee(int id) {
-		this.id = id;
-		System.out.println("Employee(int id).....");
-	}
-
-	public Employee(int id, String name) {
-		this.id = id;
-		this.name = name;
-	}
-
-	public Employee(int id, String name, int age, double salary) {
-
-		this.id = id;
-		this.name = name;
-		this.age = age;
-		this.salary = salary;
-	}
-
-	@Override
-	public String toString() {
-		return "Employee{" + "id=" + id + ", name='" + name + '\'' + ", age=" + age + ", salary=" + salary + '}';
-	}
-
-	@Override
-	public boolean equals(Object o) {
-		if (this == o)
-			return true;
-		if (o == null || getClass() != o.getClass())
-			return false;
-
-		Employee employee = (Employee) o;
-
-		if (id != employee.id)
-			return false;
-		if (age != employee.age)
-			return false;
-		if (Double.compare(employee.salary, salary) != 0)
-			return false;
-		return name != null ? name.equals(employee.name) : employee.name == null;
-	}
-
-	@Override
-	public int hashCode() {
-		int result;
-		long temp;
-		result = id;
-		result = 31 * result + (name != null ? name.hashCode() : 0);
-		result = 31 * result + age;
-		temp = Double.doubleToLongBits(salary);
-		result = 31 * result + (int) (temp ^ (temp >>> 32));
-		return result;
-	}
-}
-
+- **重启Nginx**
+```shell
+./sbin/nginx -s reload
 ```
-
-
-
-```Java
-/**
- * 提供用于测试的数据
- */
-public class EmployeeData {
-   
-   public static List<Employee> getEmployees(){
-      List<Employee> list = new ArrayList<>();
-      
-      list.add(new Employee(1001, "马化腾", 34, 6000.38));
-      list.add(new Employee(1002, "马云", 12, 9876.12));
-      list.add(new Employee(1003, "刘强东", 33, 3000.82));
-      list.add(new Employee(1004, "雷军", 26, 7657.37));
-      list.add(new Employee(1005, "李彦宏", 65, 5555.32));
-      list.add(new Employee(1006, "比尔盖茨", 42, 9500.43));
-      list.add(new Employee(1007, "任正非", 26, 4333.32));
-      list.add(new Employee(1008, "扎克伯格", 35, 2500.32));
-      
-      return list;
-   }
-   
-}
+<a name="A1tj1"></a>
+### 5.3 验证
+浏览器输入：[http://192.168.1.3:8124/ui/](http://192.168.1.2:8123/ui/)<br />![img_7.png](../../../images/img_7.png)
+<a name="g3FPc"></a>
+## 六、配置安全认证
+开启https和jwt认证后，openLooKeng的UI界面就无法使用了，所以需要结合openLooKeng客户端来查看内部数据。具体操作如下：
+```shell
+$ cd /opt/third/hetu-server/bin
+# 使用openLooKeng客户端命令进入命令行
+$ ./hetu-cli --server localhost:9090 --debug  --catalog  hive  --schema test
 ```
+<a name="YwV0q"></a>
+### 6.1 Https
+```bash
+# 进入hetu-server安装目录
+$ cd /opt/third/hetu-server
 
+$ vi etc/config.properties
+# 添加以下内容
+# 密钥配置项
+http-server.https.enabled=true
+http-server.https.port=8123
+http-server.https.keystore.path=/opt/third/hetu-server/etc/https/keystore.jks
+http-server.https.keystore.key=123456
+# 修改为false
+hetu.queryeditor-ui.allow-insecure-over-http=false
+# 修改为https
+discovery.uri=https://192.168.1.1:8123
+# 删除 http-server.http.port=8123
+http-server.http.port=8123
 
+$ mkdir etc/https
+$ cd etc/https
 
-**下面来通过实际例子讲解方法引用：**
-
-```java
-
-
-/**
- * 方法引用的使用
- *
- * 1.使用情境：当要传递给Lambda体的操作，已经有实现的方法了，可以使用方法引用！
- *
- * 2.方法引用，本质上就是Lambda表达式，而Lambda表达式作为函数式接口的实例。所以
- *   方法引用，也是函数式接口的实例。
- *
- * 3. 使用格式：  类(或对象) :: 方法名
- *
- * 4. 具体分为如下的三种情况：
- *    情况1     对象 :: 非静态方法
- *    情况2     类 :: 静态方法
- *
- *    情况3     类 :: 非静态方法
- *
- * 5. 方法引用使用的要求：
- * 	接口中的抽象方法的形参列表和返回值类型
- * 	与
- * 	方法引用的方法的形参列表和返回值类型相同！（针对于情况1和情况2）
- *
- */
-public class MethodRefTest {
-
-	// 情况一：对象 :: 实例方法
-	//Consumer中的void accept(T t)
-	//PrintStream中的void println(T t)
-	@Test
-	public void test1() {
-		Consumer<String> con1 = str -> System.out.println(str);
-		con1.accept("北京");
-
-		System.out.println("*******************");
-		PrintStream ps = System.out;
-		Consumer<String> con2 = ps::println;
-		con2.accept("beijing");
-	}
-	
-	//Supplier中的T get()
-	//Employee中的String getName()
-	@Test
-	public void test2() {
-		Employee emp = new Employee(1001,"Tom",23,5600);
-
-		Supplier<String> sup1 = () -> emp.getName();
-		System.out.println(sup1.get());
-
-		System.out.println("*******************");
-		Supplier<String> sup2 = emp::getName;
-		System.out.println(sup2.get());
-
-	}
-
-	// 情况二：类 :: 静态方法
-	//Comparator中的int compare(T t1,T t2)
-	//Integer中的int compare(T t1,T t2)
-	@Test
-	public void test3() {
-		Comparator<Integer> com1 = (t1,t2) -> Integer.compare(t1,t2);
-		System.out.println(com1.compare(12,21));
-
-		System.out.println("*******************");
-
-		Comparator<Integer> com2 = Integer::compare;
-		System.out.println(com2.compare(12,3));
-
-	}
-	
-	//Function中的R apply(T t)
-	//Math中的Long round(Double d)
-	@Test
-	public void test4() {
-		Function<Double,Long> func = new Function<Double, Long>() {
-			@Override
-			public Long apply(Double d) {
-				return Math.round(d);
-			}
-		};
-
-		System.out.println("*******************");
-
-		Function<Double,Long> func1 = d -> Math.round(d);
-		System.out.println(func1.apply(12.3));
-
-		System.out.println("*******************");
-
-		Function<Double,Long> func2 = Math::round;
-		System.out.println(func2.apply(12.6));
-	}
-
-	// 情况三：类 :: 实例方法  (有难度)
-	// Comparator中的int comapre(T t1,T t2)  第一个参数T t1,也可以变成方法的调用者
-	// String中的int t1.compareTo(t2)        看上面说的，t1变成了调用者等价于第一个参数T t1
-	@Test
-	public void test5() {
-		Comparator<String> com1 = (s1,s2) -> s1.compareTo(s2);
-		System.out.println(com1.compare("abc","abd"));
-
-		System.out.println("*******************");
-
-		Comparator<String> com2 = String :: compareTo;
-		System.out.println(com2.compare("abd","abm"));
-	}
-
-	//BiPredicate中的boolean test(T t1, T t2);
-	//String中的boolean t1.equals(t2)
-	@Test
-	public void test6() {
-		BiPredicate<String,String> pre1 = (s1,s2) -> s1.equals(s2);
-		System.out.println(pre1.test("abc","abc"));
-
-		System.out.println("*******************");
-		BiPredicate<String,String> pre2 = String :: equals;
-		System.out.println(pre2.test("abc","abd"));
-	}
-	
-	// Function中的R apply(T t)
-	// Employee中的String getName();   第一个参数T t相当于方法调用者emp，返回值R和String对应
-	@Test
-	public void test7() {
-		Employee employee = new Employee(1001, "Jerry", 23, 6000);
-
-
-		Function<Employee,String> func1 = e -> e.getName();
-		System.out.println(func1.apply(employee));
-
-		System.out.println("*******************");
-
-
-		Function<Employee,String> func2 = Employee::getName;
-		System.out.println(func2.apply(employee));
-
-
-	}
-
-}
-
+# 执行生成keystore，执行成功后会生成keystore.jks，ip修改为Nginx主机
+$ keytool -genkeypair -alias presto_keystore -validity 3650 -keyalg RSA -dname "CN=192.168.1.3,OU=Unknown,O=Unknown,L=Unknown,S=Unknown,C=Unknown " -ext SAN=IP:192.168.1.3 -keypass 123456 -keystore keystore.jks -storepass 123456 -storetype JKS
 ```
+<a name="tkYx4"></a>
+### 6.2 JWT
+```bash
+# 进入hetu-server安装目录
+$ cd /opt/third/hetu-server
 
+$ vi etc/config.properties
+# 添加以下内容
+# jwt认证
+http-server.authentication.type=JWT
+http.authentication.jwt.key-file=/opt/third/hetu-server/etc/jwt/${KID}.key
 
-
-
-
-# 构造器引用
-
-格式：ClassName :: new
-
-与函数式接口相结合，自动与函数式接口中方法兼容。可以把构造器引用赋值给定义的方法，要求构造器参数列表要与接口中抽象方法的参数列表一致！且方法的返回值即为构造器对应类的对象。
-
-
-
-```Java
-
-import org.junit.Test;
-
-import java.util.Arrays;
-import java.util.function.BiFunction;
-import java.util.function.Function;
-import java.util.function.Supplier;
-
-/**
- * 一、构造器引用
- *      和方法引用类似，函数式接口的抽象方法的形参列表和构造器的形参列表一致。
- *      抽象方法的返回值类型即为构造器所属的类的类型
- *
- * 二、数组引用
- *     大家可以把数组看做是一个特殊的类，则写法与构造器引用一致。
- *
- */
-public class ConstructorRefTest {
-
-    /**
-     * 构造器引用
-     * Supplier中的T get()
-     * Employee的空参构造器：Employee()
-     * 1、和方法引用一样的理解方法，你的get()方法没有参数，我的Employee()也没有参数。
-     * 2、你的get()方法有返回值T，我的Employee()方法返回值也是一个对象
-     * 3、所以刚好可以用  
-     */
-    @Test
-    public void test1(){
-
-        Supplier<Employee> sup = new Supplier<Employee>() {
-            @Override
-            public Employee get() {
-                return new Employee();
-            }
-        };
-        System.out.println("*******************");
-
-        Supplier<Employee>  sup1 = () -> new Employee();
-        System.out.println(sup1.get());
-
-        System.out.println("*******************");
-
-        Supplier<Employee>  sup2 = Employee :: new;
-        System.out.println(sup2.get());
-    }
-
-	//Function中的R apply(T t)
-    @Test
-    public void test2(){
-        Function<Integer,Employee> func1 = id -> new Employee(id);
-        Employee employee = func1.apply(1001);
-        System.out.println(employee);
-
-        System.out.println("*******************");
-
-        Function<Integer,Employee> func2 = Employee :: new;
-        Employee employee1 = func2.apply(1002);
-        System.out.println(employee1);
-
-    }
-
-	//BiFunction中的R apply(T t,U u)
-    @Test
-    public void test3(){
-        BiFunction<Integer,String,Employee> func1 = (id,name) -> new Employee(id,name);
-        System.out.println(func1.apply(1001,"Tom"));
-
-        System.out.println("*******************");
-
-        BiFunction<Integer,String,Employee> func2 = Employee :: new;
-        System.out.println(func2.apply(1002,"Tom"));
-
-    }
-
-	//数组引用
-    //Function中的R apply(T t)
-    @Test
-    public void test4(){
-        Function<Integer,String[]> func1 = length -> new String[length];
-        String[] arr1 = func1.apply(5);
-        System.out.println(Arrays.toString(arr1));
-
-        System.out.println("*******************");
-
-        Function<Integer,String[]> func2 = String[] :: new;
-        String[] arr2 = func2.apply(10);
-        System.out.println(Arrays.toString(arr2));
-
-    }
-}
-
+$ mkdir etc/jwt
+$ cd etc/jwt
+$ vi qing.key
+# 将金蝶方生成的sk添加到qing.key中即可，如：KiTQFUyQV7pgHAB4AFn4RQ==
 ```
+<a name="X3Y0V"></a>
+### 6.3 配置网关认证
+```bash
+# 进入hetu-server安装目录
+$ cd /opt/third/hetu-server
 
+$ mkdir etc/auth
+$ vi etc/kingdee.properties
+# 添加以下配置
 
+# 数栖网关地址
+gataway.server.addr=http://192.168.1.5:8886
+# 轻分析服务地址
+kingdee.server.addr=http://192.168.1.6:8778
 
-# 强大的Stream API
+# 租户与用户映射地址
+mapping.addr=/api/uac/current/mapping
+# catalog权限校验地址
+catalog.auth.addr=/connector/check
 
-## Stream API说明
-
-- Java8中有两大最为重要的改变。第一个是 **Lambda** **表达式**；另外一个则是 **Stream API**。 
-
-- Stream API ( java.util.stream) 把真正的函数式编程风格引入到Java中。这是目前为止对Java类库最好的补充，因为Stream API可以极大提供Java程序员的生产力，让程序员写出高效率、干净、简洁的代码。
-
-- Stream 是 Java8 中处理集合的关键抽象概念，它可以指定你希望对集合进行的操作，可以执行非常复杂的查找、过滤和映射数据等操作。 **使用Stream API 对集合数据进行操作，就类似于使用 SQL 执行的数据库查询。**也可以使用 Stream API 来并行执行操作。简言之，Stream API 提供了一种高效且易于使用的处理数据的方式
-
-
-
-## 为什么要使用Stream API
-
-- 实际开发中，项目中多数数据源都来自于Mysql，Oracle等，很多一些复杂的数据获取可以直接在sql层面去解决。但现在数据源可以更多了，有MongDB，Radis等，而这些NoSQL的数据本身不支持一些复杂的数据计算，这个时候就需要Java层面去处理。 
-
-- Stream 和 Collection 集合的区别：Collection 是一种静态的内存数据结构，而 Stream 是有关计算的。前者是主要面向内存，存储在内存中，后者主要是面向 CPU，通过 CPU 实现计算。
-
-
-
-## 什么是Stream
-
-Stream到底是什么呢？
-
-是数据渠道，用于操作数据源（集合、数组等）所生成的元素序列。
-
-**“集合讲的是数据，Stream讲的是计算！”**
-
-**注意：**
-
-①Stream 自己不会存储元素。
-
-②Stream 不会改变源对象。相反，他们会返回一个持有结果的新Stream。 
-
-③Stream 操作是延迟执行的。这意味着他们会等到需要结果的时候才执行
-
-
-
-
-
-**Stream** **的操作三个步骤**
-
-1、创建Stream
-
-一个数据源（如：集合、数组），获取一个流
-
-2、中间操作
-
-一个中间操作链，对数据源的数据进行处理
-
-3、终止操作(终端操作) 
-
-一旦执行终止操作，就执行中间操作链，才产生结果【也就是所谓的延迟执行】。之后，不会再被使用
-
-
-
-<img src="https://npm.elemecdn.com/youthlql@1.0.8/Java_Basis/Java8_New_Features/0004.png">
-
-
-
-
-
-## 创建Stream
-
-
-
-```java
-
-public class StreamAPITest {
-
-    //创建 Stream方式一：通过集合
-    @Test
-    public void test1(){
-        List<Employee> employees = EmployeeData.getEmployees();
-
-//        default Stream<E> stream() : 返回一个顺序流，顺序流等会中间操作拿数据的时候按顺序拿
-        Stream<Employee> stream = employees.stream();
-
-//        default Stream<E> parallelStream() : 返回一个并行流
-        Stream<Employee> parallelStream = employees.parallelStream();
-
-    }
-
-    //创建 Stream方式二：通过数组
-    @Test
-    public void test2(){
-        int[] arr = new int[]{1,2,3,4,5,6};
-        //调用Arrays类的static <T> Stream<T> stream(T[] array): 返回一个流
-        IntStream stream = Arrays.stream(arr);
-
-        Employee e1 = new Employee(1001,"Tom");
-        Employee e2 = new Employee(1002,"Jerry");
-        Employee[] arr1 = new Employee[]{e1,e2};
-        Stream<Employee> stream1 = Arrays.stream(arr1);
-
-    }
-    //创建 Stream方式三：通过Stream的of()，通过显示值创建一个流。它可以接收任意数量的参数
-    @Test
-    public void test3(){
-
-        Stream<Integer> stream = Stream.of(1, 2, 3, 4, 5, 6);
-
-    }
-
-    //创建 Stream方式四：创建无限流【用的少，了解下就行】
-    @Test
-    public void test4(){
-
-//      迭代
-//      public static<T> Stream<T> iterate(final T seed, final UnaryOperator<T> f)
-        //遍历前10个偶数
-        Stream.iterate(0, t -> t + 2).limit(10).forEach(System.out::println);
-
-
-//      生成
-//      public static<T> Stream<T> generate(Supplier<T> s)
-        Stream.generate(Math::random).limit(10).forEach(System.out::println);
-
-    }
-
-}
-
+# 网关ak
+access.key=dOrCa0oHzK2DWBJR
+# 网关sk
+secure.key=YEfdIreTWvNEabcii2LSbORJ0vYIbw==
 ```
-
-
-
-
-
-## 中间操作
-
-```Java
-
-/**
- * 测试Stream的中间操作
- */
-public class StreamAPITest1 {
-
-    //1-筛选与切片
-    @Test
-    public void test1(){
-        List<Employee> list = EmployeeData.getEmployees();
-//        filter(Predicate p)——过滤   接收 Lambda ， 从流中排除某些元素。
-        Stream<Employee> stream = list.stream();
-        //练习：查询员工表中薪资大于7000的员工信息
-        /**
-         * List<String> filterStrs1 = filterString(list,s -> s.contains("京"));
-         * 跟之前的这个lambda表达式代码是一个意思
-         */
-        stream.filter(e -> e.getSalary() > 7000).forEach(System.out::println);
-
-        System.out.println();
-//        limit(n)——截断流，使其元素不超过给定数量。
-        list.stream().limit(3).forEach(System.out::println);
-        System.out.println();
-
-        /*
-        skip(n) —— 跳过元素，返回一个扔掉了前 n 个元素的流。若流中元素不足 n 个，
-        则返回一个空流。与 limit(n) 互补
-        */
-        list.stream().skip(3).forEach(System.out::println);
-
-        System.out.println();
-//        distinct()——筛选，通过流所生成元素的 hashCode() 和 equals() 去除重复元素
-
-        list.add(new Employee(1010,"刘强东",40,8000));
-        list.add(new Employee(1010,"刘强东",41,8000));
-        list.add(new Employee(1010,"刘强东",40,8000));
-        list.add(new Employee(1010,"刘强东",40,8000));
-        list.add(new Employee(1010,"刘强东",40,8000));
-
-//        System.out.println(list);
-
-        list.stream().distinct().forEach(System.out::println);
-    }
-
-    //映射
-    @Test
-    public void test2(){
-        /*
-        map(Function f)——接收一个函数作为参数，将元素转换成其他形式或提取信息，该函数会被应
-        用到每个元素上，并将其映射成一个新的元素。
-        */
-        List<String> list = Arrays.asList("aa", "bb", "cc", "dd");
-        list.stream().map(str -> str.toUpperCase()).forEach(System.out::println);
-
-//        练习1：获取员工姓名长度大于3的员工的姓名。
-        List<Employee> employees = EmployeeData.getEmployees();
-        Stream<String> namesStream = employees.stream().map(Employee::getName);
-        namesStream.filter(name -> name.length() > 3).forEach(System.out::println);
-        System.out.println();
-        //练习2：
-        Stream<Stream<Character>> streamStream = list.stream().map(StreamAPITest1::fromStringToStream);
-        //这个还需要两层遍历
-        streamStream.forEach(s ->{
-            s.forEach(System.out::println);
-        });
-        System.out.println();
-        /*
-        flatMap(Function f)——接收一个函数作为参数，将流中的每个值都换成另一个流，然后把所有流连
-        接成一个流。flatMap一层遍历即可拿到想要的结果
-        */
-        Stream<Character> characterStream = list.stream().flatMap(StreamAPITest1::fromStringToStream);
-        characterStream.forEach(System.out::println);
-
-    }
-
-    //将字符串中的多个字符构成的集合转换为对应的Stream的实例
-    public static Stream<Character> fromStringToStream(String str){//aa
-        ArrayList<Character> list = new ArrayList<>();
-        for(Character c : str.toCharArray()){
-            list.add(c);
-        }
-       return list.stream();
-
-    }
-
-
-    //3-排序
-    @Test
-    public void test4(){
-//        sorted()——自然排序
-        List<Integer> list = Arrays.asList(12, 43, 65, 34, 87, 0, -98, 7);
-        list.stream().sorted().forEach(System.out::println);
-        //抛异常，原因:Employee没有实现Comparable接口
-//        List<Employee> employees = EmployeeData.getEmployees();
-//        employees.stream().sorted().forEach(System.out::println);
-
-
-//        sorted(Comparator com)——定制排序
-
-        List<Employee> employees = EmployeeData.getEmployees();
-        employees.stream().sorted( (e1,e2) -> {
-
-           int ageValue = Integer.compare(e1.getAge(),e2.getAge());
-           if(ageValue != 0){
-               return ageValue;
-           }else{
-               return -Double.compare(e1.getSalary(),e2.getSalary());
-           }
-
-        }).forEach(System.out::println);
-    }
-
-}
-
-```
-
-
-
-## 终止操作
-
-
-
-```Java
-
-/**
- * 测试Stream的终止操作
- *
- */
-public class StreamAPITest2 {
-
-    //1-匹配与查找
-    @Test
-    public void test1(){
-        List<Employee> employees = EmployeeData.getEmployees();
-
-//        allMatch(Predicate p)——检查是否匹配所有元素。
-//          练习：是否所有的员工的年龄都大于18
-        boolean allMatch = employees.stream().allMatch(e -> e.getAge() > 18);
-        System.out.println(allMatch);
-
-//        anyMatch(Predicate p)——检查是否至少匹配一个元素。
-//         练习：是否存在员工的工资大于 10000
-        boolean anyMatch = employees.stream().anyMatch(e -> e.getSalary() > 10000);
-        System.out.println(anyMatch);
-
-//        noneMatch(Predicate p)——检查是否没有匹配的元素。
-//          练习：是否存在员工姓“雷”
-        boolean noneMatch = employees.stream().noneMatch(e -> e.getName().startsWith("雷"));
-        System.out.println(noneMatch);
-//        findFirst——返回第一个元素
-        Optional<Employee> employee = employees.stream().findFirst();
-        System.out.println(employee);
-//        findAny——返回当前流中的任意元素
-        Optional<Employee> employee1 = employees.parallelStream().findAny();
-        System.out.println(employee1);
-
-    }
-
-    @Test
-    public void test2(){
-        List<Employee> employees = EmployeeData.getEmployees();
-        // count——返回流中元素的总个数
-        long count = employees.stream().filter(e -> e.getSalary() > 5000).count();
-        System.out.println(count);
-//        max(Comparator c)——返回流中最大值
-//        练习：返回最高的工资：
-        Stream<Double> salaryStream = employees.stream().map(e -> e.getSalary());
-        Optional<Double> maxSalary = salaryStream.max(Double::compare);
-        System.out.println(maxSalary);
-//        min(Comparator c)——返回流中最小值
-//        练习：返回最低工资的员工
-        Optional<Employee> employee = employees.stream().min((e1, e2) -> Double.compare(e1.getSalary(), e2.getSalary()));
-        System.out.println(employee);
-        System.out.println();
-//        forEach(Consumer c)——内部迭代
-        employees.stream().forEach(System.out::println);
-
-        //使用集合的遍历操作
-        employees.forEach(System.out::println);
-    }
-
-    //2-归约
-    @Test
-    public void test3(){
-//        reduce(T identity, BinaryOperator)——可以将流中元素反复结合起来，得到一个值。返回 T
-//        练习1：计算1-10的自然数的和
-        List<Integer> list = Arrays.asList(1,2,3,4,5,6,7,8,9,10);
-        Integer sum = list.stream().reduce(0, Integer::sum);
-        System.out.println(sum);
-
-
-//        reduce(BinaryOperator) ——可以将流中元素反复结合起来，得到一个值。返回 Optional<T>
-//        练习2：计算公司所有员工工资的总和
-        List<Employee> employees = EmployeeData.getEmployees();
-        Stream<Double> salaryStream = employees.stream().map(Employee::getSalary);
-//        Optional<Double> sumMoney = salaryStream.reduce(Double::sum);
-        Optional<Double> sumMoney = salaryStream.reduce((d1,d2) -> d1 + d2);
-        System.out.println(sumMoney.get());
-
-    }
-
-    //3-收集
-    @Test
-    public void test4(){
-// collect(Collector c)——将流转换为其他形式。接收一个 Collector接口的实现，用于给Stream中元素做汇总的方法
-//        练习1：查找工资大于6000的员工，结果返回为一个List或Set
-
-        List<Employee> employees = EmployeeData.getEmployees();
-        List<Employee> employeeList = employees.stream().filter(e -> e.getSalary() > 6000).collect(Collectors.toList());
-
-        employeeList.forEach(System.out::println);
-        System.out.println();
-        Set<Employee> employeeSet = employees.stream().filter(e -> e.getSalary() > 6000).collect(Collectors.toSet());
-
-        employeeSet.forEach(System.out::println);
-
-
-
-
-    }
-}
-
-```
-
-
-
-# Optional类
-
-## 什么是Optional？
-
-
-
-- 到目前为止，臭名昭著的空指针异常是导致Java应用程序失败的最常见原因。以前，为了解决空指针异常，Google公司著名的Guava项目引入了Optional类，Guava通过使用检查空值的方式来防止代码污染，它鼓励程序员写更干净的代码。受到Google Guava的启发，Optional类已经成为Java 8类库的一部分。
-
-- Optional<T> 类(java.util.Optional) 是一个容器类，它可以保存类型T的值，代表这个值存在。或者仅仅保存null，表示这个值不存在。原来用 null 表示一个值不存在，现在 Optional 可以更好的表达这个概念。并且可以避免空指针异常。 
-
-- Optional类的Javadoc描述如下：这是一个可以为null的容器对象。如果值存在则isPresent()方法会返回true，调用get()方法会返回该对象。
-
-
-
-## 常用API
-
-<img src="https://npm.elemecdn.com/youthlql@1.0.8/Java_Basis/Java8_New_Features/0005.png">
-
-
-
-
-
-## 举例
-
-首先准备两个类
-
-```java
-
-public class Boy {
-    private Girl girl;
-
-    @Override
-    public String toString() {
-        return "Boy{" +
-                "girl=" + girl +
-                '}';
-    }
-
-    public Girl getGirl() {
-        return girl;
-    }
-
-    public void setGirl(Girl girl) {
-        this.girl = girl;
-    }
-
-    public Boy() {
-
-    }
-
-    public Boy(Girl girl) {
-
-        this.girl = girl;
-    }
-}
-```
-
-
-
-```java
-public class Girl {
-
-    private String name;
-
-    @Override
-    public String toString() {
-        return "Girl{" +
-                "name='" + name + '\'' +
-                '}';
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public Girl() {
-
-    }
-
-    public Girl(String name) {
-
-        this.name = name;
-    }
-}
-```
-
-
-
-这里只是简单的测试两个API
-
-```Java
-/**
- * Optional类：为了在程序中避免出现空指针异常而创建的。
- *
- * 常用的方法：ofNullable(T t)
- *            orElse(T t)
- *
- */
-public class OptionalTest {
-
-/*
-Optional.of(T t) : 创建一个 Optional 实例，t必须非空；
-Optional.empty() : 创建一个空的 Optional 实例
-Optional.ofNullable(T t)：t可以为null
-
- */
-    @Test
-    public void test1(){
-        Girl girl = new Girl();
-//        girl = null;
-        //of(T t):保证t是非空的
-        Optional<Girl> optionalGirl = Optional.of(girl);
-
-    }
-
-    @Test
-    public void test2(){
-        Girl girl = new Girl();
-//        girl = null;
-        //ofNullable(T t)：t可以为null
-        Optional<Girl> optionalGirl = Optional.ofNullable(girl);
-        System.out.println(optionalGirl);
-        //orElse(T t1):如果单前的Optional内部封装的t是非空的，则返回内部的t.
-        //如果内部的t是空的，则返回orElse()方法中的参数t1.
-        Girl girl1 = optionalGirl.orElse(new Girl("赵丽颖"));
-        System.out.println(girl1);
-
-    }
-}
-```
-
-
-
-**实际场景使用**
-
-可能出现空指针的例子：
-
-```java
-public String getGirlName(Boy boy){
-        return boy.getGirl().getName();
-    }
-
-    @Test
-    public void test3(){
-        Boy boy = new Boy();
-        boy = null;
-        String girlName = getGirlName(boy);
-        System.out.println(girlName);
-
-    }
-```
-
-
-
-结果：
-
-```
-java.lang.NullPointerException
-	at com.atguigu.java4.OptionalTest.getGirlName(OptionalTest.java:47)
-	at com.atguigu.java4.OptionalTest.test3(OptionalTest.java:54)
-...
-...
-
-Process finished with exit code -1
-```
-
-
-
-没有Optional的解决办法，但是如果调用层数过多，就得一层一层判断是否为null，写起来很麻烦。
-
-```Java
-//优化以后的getGirlName():
-    public String getGirlName1(Boy boy){
-        if(boy != null){
-            Girl girl = boy.getGirl();
-            if(girl != null){
-                return girl.getName();
-            }
-        }
-
-        return null;
-
-    }
-@Test
-    public void test4(){
-        Boy boy = new Boy();
-        boy = null;
-        String girlName = getGirlName1(boy);
-        System.out.println(girlName);
-
-    }
-```
-
-
-
-使用Optional解决问题：
-
-```Java
- //使用Optional类的getGirlName():
-    public String getGirlName2(Boy boy){
-
-        Optional<Boy> boyOptional = Optional.ofNullable(boy);
-        //此时的boy1一定非空
-        Boy boy1 = boyOptional.orElse(new Boy(new Girl("迪丽热巴")));
-
-        Girl girl = boy1.getGirl();
-
-        Optional<Girl> girlOptional = Optional.ofNullable(girl);
-        //girl1一定非空
-        Girl girl1 = girlOptional.orElse(new Girl("古力娜扎"));
-
-        return girl1.getName();
-    }
-
-    @Test
-    public void test5(){
-        Boy boy = null;
-        boy = new Boy();
-        boy = new Boy(new Girl("苍老师"));
-        String girlName = getGirlName2(boy);
-        System.out.println(girlName);
-
-    }
-```
-
-这种是绝对不会出现空指针的。
-
-
-
-# 接口的增强
-
-```
-JDK7及以前：只能定义全局常量和抽象方法
-  >全局常量：public static final的.但是书写时，可以省略不写
-  >抽象方法：public abstract的
-  			
-JDK8：除了定义全局常量和抽象方法之外，还可以定义静态方法、默认方法
-```
-
-
-
-```java
-/*
- * JDK8：除了定义全局常量和抽象方法之外，还可以定义静态方法、默认方法
- */
-public interface CompareA {
-
-    //静态方法
-    public static void method1() {
-
-        System.out.println("CompareA:北京");
-    }
-
-    //默认方法
-    public default void method2() {
-        System.out.println("CompareA：上海");
-    }
-    //接口中的public 可以省略，自动就是public
-    default void method3() {
-        System.out.println("CompareA：上海");
-    }
-}
-```
-
-
-
-```java
-public class SuperClass {
-	
-	public void method3(){
-		System.out.println("SuperClass:北京");
-	}
-	
-}
-```
-
-
-
-```java
-public interface CompareB {
-	
-	default void method3(){
-		System.out.println("CompareB：上海");
-	}
-	
-}
-```
-
-
-
-
-
-```java
-public class SubClassTest {
-	
-	public static void main(String[] args) {
-		SubClass s = new SubClass();
-		
-//		s.method1();
-//		SubClass.method1();
-		//知识点1：接口中定义的静态方法，只能通过接口来调用。实现类用不了
-		CompareA.method1();
-		//知识点2：通过实现类的对象，可以调用接口中的默认方法。
-		//如果实现类重写了接口中的默认方法，调用时，仍然调用的是重写以后的方法
-		s.method2();
-		//知识点3：如果子类(或实现类)继承的父类和实现的接口中声明了同名同参数的默认方法，
-		//那么子类在没有重写此方法的情况下，默认调用的是父类中的同名同参数的方法。-->类优先原则
-		//知识点4：如果实现类实现了多个接口，而这多个接口中定义了同名同参数的默认方法，
-		//那么在实现类没有重写此方法的情况下，报错。-->接口冲突。
-		//这就需要我们必须在实现类中重写此方法
-		s.method3();
-		
-	}
-	
-}
-
-class SubClass extends SuperClass implements CompareA,CompareB{
-	
-	public void method2(){
-		System.out.println("SubClass：上海");
-	}
-	
-	public void method3(){
-		System.out.println("SubClass：深圳");
-	}
-	
-	//知识点5：如何在子类(或实现类)的方法中调用父类、接口中被重写的方法
-	public void myMethod(){
-		method3();//调用自己定义的重写的方法
-		super.method3();//调用的是父类中声明的
-		//调用接口中的默认方法
-		CompareA.super.method3();
-		CompareB.super.method3();
-	}
-}
-```
-
-
-
-
-
-# 日期API【TODO】
-
-
-
-
-
-# 注解【TODO】
-
-
+<a name="J9Ibo"></a>
+## 七、参考
+【1】官方部署文档：[https://openlookeng.io/zh-cn/docs/docs/installation/deployment-ha.html](https://openlookeng.io/zh-cn/docs/docs/installation/deployment-ha.html)
 
